# data-engineering

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  repomix-output.xml  repomix.config.json  tasks.ps1
.cursor/rules/: 00-project.mdc  10-python.mdc
.github/workflows/: ci.yml
docs/: README.md  curriculum.md  modules.md  progression.md  scope-cap.md  setup.md
infra/: README.md  docker-compose.yml
modules/: README.md
modules/01_python_model/: README.md  exercises.py
modules/01_python_model/notes/: array-string-patterns.md  python-foundations.md
modules/01_python_model/tests/: test_module_01_stub.py  test_python_model.py
modules/02_dsa/: README.md
modules/02_dsa/tests/: test_module_02_stub.py
modules/02_sql_relational/: README.md  load_to_postgres.py
modules/02_sql_relational/notes/: normalization_oltp_olap.md  sql-foundations.md  sql-patterns.md
modules/02_sql_relational/sql/: 01_views.sql  02_recursive_cte.sql  03_index_demo.sql  04_window_patterns.sql  05_procedures_triggers.sql  06_merge_upsert.sql  07_rls_isolation.sql
modules/02_sql_relational/tests/: test_sql_slice.py
modules/03_bi_tools/: README.md
modules/03_bi_tools/notes/: grain_checklist.md  lineage_example.md  power_bi_dax.md  stakeholder_engagement.md  tool_comparison.md
modules/03_sql_relational/: README.md
modules/04_spark_internals/: README.md  join_aggregate_job.py  oom_exercise.py
modules/05_warehousing/: README.md  dimensional_modeling.py  olap_analytics.py  query_star_schema.py
modules/05_warehousing_bi/: README.md
modules/06_streaming_kafka/: README.md  concepts.md  roundtrip.py
modules/07_ai_assisted_dev/: README.md
modules/07_oop_design_patterns/: README.md
modules/08_ai_assisted_dev/: README.md
modules/08_lakehouse_medallion/: README.md  delta_concepts.md  governance_compliance.md  medallion_pipeline.py  table_format_lab.py
modules/09_capstone_governance/: README.md
modules/09_cloud_portability/: README.md  concepts.md  object_store_roundtrip.py
modules/10_dbt_orchestration/: README.md  concepts.md  run_pipeline.py
src/def_/: __init__.py
tests/: conftest.py  test_integration.py
(+33 files in other folders)
