[project]
name = "data-engineering-foundations"
version = "0.1.0"
description = "Hands-on data engineering foundations — prove-it modules with local Docker infra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "kafka-python>=2.0.2",
    "psycopg[binary]>=3.2.0",
    "pyarrow>=18.0.0",
    "pyspark>=3.5.0,<4",
]

[project.optional-dependencies]
# Module 09 — multi-cloud object storage via fsspec backends (local emulators).
cloud = [
    "fsspec>=2024.9.0",
    "s3fs>=2024.9.0",
    "gcsfs>=2024.9.0",
    "adlfs>=2024.7.0",
]
# Module 10 — dbt transformations + data catalog on DuckDB (no warehouse needed).
dbt = [
    "dbt-duckdb>=1.8",
]
dev = [
    "mypy>=1.13.0,<2",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "types-psycopg2>=2.9.21.20240819",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/def_"]

[dependency-groups]
dev = [
    "mypy>=1.13.0,<2",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "modules", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/def_"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyspark.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "modules"]
pythonpath = ["src", "."]
markers = [
    "integration: integration tests requiring docker services",
    "postgres: requires Postgres from docker compose",
    "spark: requires Spark cluster from docker compose",
    "kafka: requires Kafka broker from docker compose",
    "cloud: requires cloud emulators (localstack/azurite/fake-gcs) from docker compose",
    "dbt: requires the dbt extra (dbt-duckdb) and seeded Parquet; runs on DuckDB",
]
addopts = "-ra --tb=short"

[tool.coverage.run]
source = ["def_"]
omit = ["*/tests/*"]
